# js8call-bot

./: .gitignore  Dockerfile  README.md  bot.py  config.ini  docker-compose.yml  example-config.ini  pyproject.toml
.github/workflows/: build-test.yml  docker-publish.yml  publish.yml
lxmfy_js8call_bot/: bot.py
lxmfy_js8call_bot/storage/: __init__.py  sqlite_storage.py
scripts/: dev.sh
