[tool.poetry]
name = "lxmfy-js8call-bot"
version = "0.1.0"
description = ""
authors = ["LXMFy"]
readme = "README.md"
packages = [
    { include = "lxmfy_js8call_bot" }
]

[tool.poetry.dependencies]
python = "^3.13"
lxmfy = "^0.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
